JL master - gh-pages testing.

--- a/package.json
+++ b/package.json
@@ -26,5 +26,5 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "homepage": "https://devlemire.github.io/gh-pages-routing"
+  "homepage": "https://devlemire.github.io/gh-pages-routing/"
 }
